🐛fix : 모든 회원이 세션 디테일 조회 가능하도록 수정 & 번개런 크루id null 반영